UtahLiveDataTest/src/objects/MasterAgreement__c.object
<CustomObject>
    <description>[Business] This is the custom object to store all the documents like NDA , COI .</description>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
                <value>
                    <fullName>IndApplicant</fullName>
                </value>
                <value>
                    <fullName>AdditionalApplicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <label>InternalUniqueID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>MST: Agreement</label>
    <nameField>
        <label>Master Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Agreements</pluralLabel>
    <recordTypes>
        <fullName>COI</fullName>
        <active>true</active>
        <label>COI</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <label>NDA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>